--- a/_config.yml
+++ b/_config.yml
@@ -7,35 +7,33 @@
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 #--------------------------
-title: Chirpy                          # the main title
+title: "jackd" # the main title
 
-tagline: A text-focused Jekyll theme.  # it will display as the sub-title
+tagline: Deep Learning Researcher  # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, portfolio, sidebar,
-  bootstrap Jekyll theme with responsive web design
-  and focuses on text presentation.
+  Papers, projects and posts about deep learning theory and applications
 
 # fill in the base hostname & protocol for your site, e.g., 'https://username.github.io'
-url: ''
+url: 'https://jackd.github.io'
 
-author: your_full_name                  # change to your full name
+author: Dominic Jack                  # change to your full name
 
-avatar: /assets/img/sample/avatar.jpg   # support internet resources
+avatar: /assets/img/dom-cvpr.jpg   # support internet resources
 
 github:
-  username: github_username             # change to your github username
+  username: jackd             # change to your github username
 
 twitter:
-  username: twitter_username            # change to your twitter username
+  username: dombombau            # change to your twitter username
 
 social:
-  name: your_full_name                  # it will shows as the copyright owner in Footer
-  email: example@doamin.com             # change to your email address
+  name: Dominic Jack                  # it will shows as the copyright owner in Footer
+  email: thedomjack@gmail.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username      # change to your twitter homepage
-    - https://github.com/username       # change to your github homepage
+    - https://twitter.com/dombombau      # change to your twitter homepage
+    - https://github.com/jackd           # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -49,7 +47,7 @@ google_site_verification: google_meta_tag_verification # change to your verifica
 baseurl: ''
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
-timezone: Asia/Shanghai
+timezone: Australia/Brisbane
 
 google_analytics:
   id: ''          # Fill with your Google Analytics ID
