--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -25,7 +25,8 @@ jobs:
       - name: Setup Ruby
         uses: actions/setup-ruby@v1
         with:
-          ruby-version: 2.6.x
+          # ruby-version: 2.6.x
+          ruby-version: '3.0'
 
       - name: Bundle Caching
         uses: actions/cache@v2
@@ -65,7 +66,7 @@ jobs:
           else
             bash tools/test.sh
           fi
-          
+
       - name: Deploy
         run: |
           bash tools/deploy.sh
